# ambavia

./: README.md
eval/: Cargo.toml
eval/src/: compiler.rs  instruction_builder.rs  vm.rs
eval/tests/: evaluation.rs
parse/: Cargo.toml  README.md
parse/src/: analyze_expression_list.rs  ast_parser.rs  latex_parser.rs  latex_tree.rs  latex_tree_flattener.rs  name_resolver.rs  op.rs  type_checker.rs
ui/: Cargo.toml
ui/src/: expression_list.rs  graph.rs  graph.wgsl  main.rs  math_field.rs  timer.rs  ui.rs
ui/src/graph/: tile_fill.rs
ui/src/math_field/: tree.rs
