[package]
name = "eval"
version = "0.1.0"
edition = "2024"

[dependencies]
parse = { workspace = true }
typed-index-collections = { workspace = true }
derive_more = { workspace = true }
medians = "3.0.12"
strum = { version = "0.28", features = ["derive"] }
ordered-float = "5.3"

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = "0.26.1"
